# diverse-codegen-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: evalplus.py  sbatch_evalplus.sh
code_generation/: .gitignore
code_generation/scripts/dclm/: filter_dclm_baseline.py
code_generation/scripts/fasttext/: llm_refinement.py  train_model.py
code_generation/scripts/genetic_instruct/: genetic_instruction_generator.py  sbatch_codegen_colony.sh
code_generation/scripts/genetic_instruct/file_ops/: colony_merger_upload.py  dataset_uploader.py  file_merger.py  instruction_deduplication.py  sbatch_deduplication.sh  sbatch_extractor.sh  subset_extractor.py
code_generation/scripts/genetic_instruct/prompts/: code_generation.txt  cross_over.txt  evaluation.txt  fitness.txt
code_generation/scripts/instruction_tuning/: finetune_and_eval_codegemma_one_epoch.py  finetune_and_eval_phi2_one_epoch.py  finetune_codegemma.sh  finetune_phi2.py  finetune_phi2.sh  finetune_phi2_one_epoch.sh  load_data.py  parse_evaluation_csv.py
code_generation/scripts/seed_data_collection/: codenet.py  filter_tasks.py
code_generation/scripts/seed_data_collection/hugging_face/: advent_of_code.py  codeforces.py  codewars.py  deepmind_code_contest.py  leetcode.py
code_generation/scripts/seed_data_collection/scrappers/: kattis.py  project_euler.py  rosalind.py  spoj.py
code_generation/scripts/slurm/: dclm_baseline.bash  finetune_model_codegemma.bash  finetune_model_phi2.bash  finetune_model_phi2_one_epoch.bash  llm_refinement.bash
code_generation/src/shared/: llm.py
(+5 files in other folders)
